--- a/hello/package.json
+++ b/hello/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "debug": "node --inspect-brk server.js"
+    "debug": "node --inspect-brk server.js",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,4 +19,5 @@
     "express": "^4.16.3",
     "nodemon": "^1.18.7"
   }
+
 }
